--- a/priv/translations/nl.po
+++ b/priv/translations/nl.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2025-07-23 00:40+0200\n"
+"PO-Revision-Date: 2025-07-23 00:41+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: nl\n"
@@ -287,7 +287,7 @@ msgstr "Sla deze pagina op."
 
 #: queercal/priv/templates/event/_share-event.tpl:18
 msgid "Share this event"
-msgstr "Deel deze pagina"
+msgstr "Deel dit evenement"
 
 #: queercal/priv/templates/_admin_edit_content_address.event.tpl:21
 #: queercal/priv/templates/_admin_frontend_edit_address.tpl:43
